Holy Grail Layout Example

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <main>
             <h1>Kgosiphenyo Kevin Boabilwe | WDD 130</h1>
             <img src="images/profile.jpg" alt="Kgosiphenyo Kevin Boabilwe" width="200">
-            <p>I am a Software Development student from Gaborone, Botswana.</p>
+            <p>I am a BYUI Software Development student from Gaborone, Botswana.</p>
         </main>
         <footer>
             <p>&copy;2024 | Kgosiphenyo Kevin Boabilwe | Botswana</p>
