--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale1.0">
         <title>Kgosiphenyo Kevin Boabilwe | WDD 130</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
@@ -15,7 +16,7 @@
         </header>
         <main>
             <h1>Kgosiphenyo Kevin Boabilwe | WDD 130</h1>
-            <img scr="images/profile.jpg" alt="Profile picture of Kgosiphenyo Kevin Boabilwe" width="200">
+            <img src="images/profile.jpg" alt="Profile picture of Kgosiphenyo Kevin Boabilwe" width="200">
             <p>I am a Software Development student from Gaborone, Botswana.</p>
         </main>
         <footer>
