--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p>Botswana is a country in Southern Africa known for it's beef and diamond exports.</p>
         </aside>
         <footer>
-            <p>&copy2024 | Kgosiphenyo Kevin Boabilwe | Botswana</p>
+            <p>&copy;2024 | Kgosiphenyo Kevin Boabilwe | Botswana</p>
         </footer>
     </body>
 </html>    
