--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -11,7 +11,9 @@
     <body>
         <header>
             <h1>Whitewater Warriors United</h1>
-            <p>Kgosiphenyo Kevin Boabilwe</p>
+            <div>
+                <p>Kgosiphenyo Kevin Boabilwe</p>
+            </div>
         </header>
         <main>
             <h2>Overview</h2>
