--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="wwr/">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
                 <a href="https://www.linkedin.com/in/kevin-kgosiphenyo-boabilwe-739336278/" target="_blank">LinkedIn</a>
-                <a href="https://www.facebook.com">Facebook</a>
+                <a href="https://www.facebook.com" target="_blank">Facebook</a>
             </nav>
         </header>
         <main>
