--- a/wwr/about.html
+++ b/wwr/about.html
@@ -31,11 +31,22 @@
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/raftingimg1.jpg" alt="rafting image 1">
-                <img src="images/raftingimg2.jpg" alt="rafting image 2">
-                <img src="images/raftingimg3.jpg" alt="rafting image 3">
-                <img src="images/raftingimg4.jpg" alt="rafting image 4">
-                <img src="images/raftingimg5.jpg" alt="rafting image 5">
+                <div class="adventure">
+                    <section>
+                        <figure class="adventure">
+                            <img src="images/raftingimg1.jpg" alt="rafting image 1">
+                            <figcaption>Los Dientes del Diablo</figcaption>
+                            <img src="images/raftingimg2.jpg" alt="rafting image 2">
+                            <figcaption>Los Dientes del Diablo 2</figcaption>
+                            <img src="images/raftingimg3.jpg" alt="rafting image 3">
+                            <figcaption>Big Mallard</figcaption>
+                            <img src="images/raftingimg4.jpg" alt="rafting image 4">
+                            <figcaption>Half Day Adventure</figcaption>
+                            <img src="images/raftingimg5.jpg" alt="rafting image 5">
+                            <figcaption>Half Day Adventure 2</figcaption>
+                        </figure>
+                    </section>
+                </div>
             </section>
         </main>
         <footer>
