--- a/quiz.html
+++ b/quiz.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Quiz Form Page</title>
+        <meta name="description" content="week05 basic quiz page">
+        <meta name="author" content="Kgosiphenyo Kevin Boabilwe">
         <link rel="stylesheet" href="styles/quiz.css">
     </head>
     <body>
