--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale1">
+        <meta name="description" content="About Us Page">
+        <meta name="author" content="Kgosiphenyo Kevin Boabilwe">
         <title>About Us | Whitewater Warriors United</title>
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
