--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale1">
-        <meta name="description" content="Contact Page">
+        <meta name="description" content="Contact Page for Whitewater Warriors United">
         <meta name="author" content="Kgosiphenyo Kevin Boabilwe">
         <title>Contact Us | Whitewater Warriors United</title>
         <link rel="stylesheet" href="styles/rafting.css">
