--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,10 +12,10 @@
         <header>
             <img src="images/logo.png" alt="Rafting Site Logo">
             <nav>
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Trips</a>
-                <a href="">Contact</a>
+                <a href="http://127.0.0.1:5500/wwr/index.html">Home</a>
+                <a href="http://127.0.0.1:5500/wwr/about.html">About</a>
+                <a href="http://127.0.0.1:5500/wwr/trips.html">Trips</a>
+                <a href="http://127.0.0.1:5500/wwr/contact.html">Contact</a>
             </nav>
         </header>
         <main>
