--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -12,10 +12,10 @@
         <header>
             <img src="images/logo.png" alt="Rafting Site Logo">
             <nav>
-                <a href="">Home</a>
-                <a href="">About</a>
-                <a href="">Trips</a>
-                <a href="">Contact</a>
+                <a href="http://127.0.0.1:5500/wwr/index.html">Home</a>
+                <a href="http://127.0.0.1:5500/wwr/about.html">About</a>
+                <a href="http://127.0.0.1:5500/wwr/trips.html">Trips</a>
+                <a href="http://127.0.0.1:5500/wwr/contact.html">Contact</a>
             </nav>
         </header>
         <main>
@@ -27,7 +27,9 @@
                     <p>We serve to bring together rafting enthusiasts and provide a place to plan a rafting trip, discuss rafting, and find out more about this recreational activity we love.</p>
                 </article>
             </div>
-            <button onclick="window.location.href='http://127.0.0.1:5500/wwr/contact.html'">Book Your Next Adventure!</button>
+            <div class="container">
+                <button onclick="window.location.href='http://127.0.0.1:5500/wwr/contact.html'">Book Your Next Adventure!</button>
+            </div>
             <section class="figure-container">
                 <figure>
                     <h3>Stanley, Idaho</h3>
